# lume-impact

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  MANIFEST.in  README.md  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/: FUNDING.yml  env-impact-only.yml
.github/actions/conda-setup/: action.yml
.github/workflows/: .tests.yaml.swp  gh-pages.yml  lint.yml  pypi_upload.yml  tests-pip.yml  tests.yaml
api/impact/: index.html
docs/: index.md
docs/api/: impact.md
docs/api/z/: api.md  input.md  output.md
docs/examples/: autophase_example.ipynb  basic_impact_examples.ipynb  bmad_interface.ipynb  compare_covariance.ipynb  distgen_example.ipynb  fieldmap_reconstruction.ipynb  functional_impact_run.ipynb  input_parsing_example.ipynb  lume_model_tutorial.ipynb  model_example.ipynb  model_example2.ipynb  movie_example.ipynb  output_parsing_example.ipynb  parallel_run_example.ipynb  plotting_example.ipynb  point_to_point_spacecharge.ipynb  solrf_fieldmaps.ipynb
docs/examples/devel/: devel_solrf_fieldmaps.ipynb
docs/examples/elements/: 3d_field.ipynb  apex_gun.ipynb  awa_flatbeam.ipynb  corrector_coil.ipynb  dipole.ipynb  drift.ipynb  emfield_analytic_steer.ipynb  quadrupole.ipynb  solenoid.ipynb  tesla_9cell_cavity.ipynb  traveling_wave_cavity.ipynb  wakefield.ipynb
docs/examples/z/: README.md  drift.ipynb
examples/: autophase_example.ipynb  awa_flatbeam.ipynb  basic_impact_examples.ipynb  create_fieldmaps.ipynb  distgen_example.ipynb  fermilab_fast_example.ipynb  fieldmap_reconstruction.ipynb  functional_impact_run.ipynb  input_parsing_example.ipynb  movie_example.ipynb  output_parsing_example.ipynb  parallel_run_example.ipynb  parsing_example.ipynb  particle_example.ipynb  plotting_example.ipynb  simple_impact_run.ipynb  solrf_fieldmaps.ipynb
examples/3Dfield/: 3D_field.ipynb
examples/autophase_example/: autophase_example.ipynb  index.html
examples/basic_impact_examples/: basic_impact_examples.ipynb  index.html
examples/bmad_interface/: bmad_interface.ipynb  index.html
examples/distgen_example/: distgen_example.ipynb  index.html
examples/elements/: 3d_field.ipynb  apex_gun.ipynb  dipole.ipynb  drift.ipynb  quadrupole.ipynb  solenoid.ipynb  tesla_9cell_cavity.ipynb  traveling_wave_cavity.ipynb  wakefield.ipynb
examples/elements/3d_field/: 3d_field.ipynb  index.html
examples/elements/apex_gun/: index.html
examples/elements/awa_flatbeam/: index.html
examples/elements/dipole/: index.html
examples/elements/drift/: index.html
examples/elements/quadrupole/: index.html  quadrupole.ipynb
examples/elements/solenoid/: index.html  solenoid.ipynb
examples/elements/tesla_9cell_cavity/: index.html  tesla_9cell_cavity.ipynb
examples/elements/traveling_wave_cavity/: index.html  traveling_wave_cavity.ipynb
examples/elements/wakefield/: index.html  wakefield.ipynb
examples/fieldmap_reconstruction/: index.html
examples/functional_impact_run/: functional_impact_run.ipynb  index.html
examples/input_parsing_example/: index.html  input_parsing_example.ipynb
examples/movie_example/: index.html
examples/output_parsing_example/: index.html  output_parsing_example.ipynb
examples/parallel_run_example/: index.html
examples/plotting_example/: index.html
examples/solrf_fieldmaps/: index.html
examples/templates/awa/: 1T1.T7  1T2.T7  (+1 more)
impact/: __init__.py  _version.py  archive.py  autophase.py  control.py  evaluate.py  fast_autophase.py  fieldmaps.py  impact.py  impact_distgen.py  lattice.py  model.py  parsers.py  parsers2.py  particles.py  plot.py  plotting.py  readers.py  repr.py  tools.py  writers.py
impact/elements/: dipole.py  element.py
impact/interfaces/: bmad.py
impact/model/: __init__.py  actions.py  base.py  config.py  distgen_config.py  distgen_model.py  exceptions.py  impact_config.py  impact_distgen_model.py  impact_model.py  impact_model_v2.py  impact_transformer.py  mappings.py  model.py  transformer.py
impact/tests/: conftest.py  test_basic.py  test_distgen_model.py  test_header_aliases.py  test_model.py  test_model_actions.py  test_regressions.py  test_units.py
impact/z/: __init__.py  archive.py  constants.py  errors.py  fieldmaps.py  input.py  output.py  parsers.py  particles.py  plot.py  run.py  tools.py  types.py  units.py
scripts/: execute_notebooks.bash
search/: search_index.json
templates/apex_gun/: ImpactT.in  apex_gun.ipynb  old_rfdata30  rfdata666
templates/awa/: 1T4.T7  1T5.T7  ImpactT.in  partcl.data
templates/drift/: ImpactT.in
templates/fermilab_fast/: 1T4.T7  ImpactT.in
templates/lcls_injector/: ImpactT.in  ImpactT.yaml  distgen.yaml  rfdata200  rfdata202  rfdata252  rfdata316  rfdata621  rfdata622  rfdata624  run  run.bash
templates/solenoid/: rfdata666
templates/srf_injector/: 1T940.T7  ImpactT.yaml  ImpactT_template.in
templates/tesla_9cell_cavity/: 1T9.T7  ImpactT.in  plot_fieldmaps.ipynb  temp
templates/traveling_wave_cavity/: ImpactT.in
templates/wakefield/: ImpactT.in  Sz_p5um_10mm_per35mm_cell.sdds
(+184 files in other folders)
